--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,6 +44,11 @@ body {
   font-size: 20px;
   margin-bottom: 20px;
   margin-top: 10px;
+
+  a, a:link, a:hover, a:visited, a:active {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 .article-timestamp {
