--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,12 +42,31 @@ body {
 
 .article-title {
   font-size: 20px;
+  font-weight: 700;
   margin-bottom: 20px;
   margin-top: 10px;
 
   a, a:link, a:hover, a:visited, a:active {
     color: inherit;
     text-decoration: none;
+  }
+}
+
+.article.read {
+  .article-title {
+    font-weight: 500;
+  }
+  .article-body {
+    color: #777777;
+  }
+}
+
+.article.focused {
+  .article-title {
+    font-weight: 700 !important;
+  }
+  .article-body {
+    color: #000000 !important;
   }
 }
 
