--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,7 +25,7 @@ body {
   position: fixed;
 }
 
-.article {
+.entry {
   border-color: #dddddd;
   border-width: 1px;
   border-radius: 4px;
@@ -40,7 +40,7 @@ body {
   }
 }
 
-.article-title {
+.entry-title {
   font-size: 20px;
   font-weight: 700;
   margin-bottom: 20px;
@@ -52,25 +52,25 @@ body {
   }
 }
 
-.article.read {
-  .article-title {
+.entry.read {
+  .entry-title {
     font-weight: 500;
   }
-  .article-body {
+  .entry-body {
     color: #777777;
   }
 }
 
-.article.focused {
-  .article-title {
+.entry.focused {
+  .entry-title {
     font-weight: 700 !important;
   }
-  .article-body {
+  .entry-body {
     color: #000000 !important;
   }
 }
 
-.article-timestamp {
+.entry-timestamp {
   color: #555555;
   margin-top: 30px;
 }
