--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -1,13 +1,12 @@
 .row
-  .col-md-2
+  .col-md-3
     ul.nav.nav-pills.nav-stacked.feeds
       li.active = link_to "All (#{@total_unreads_count})", root_path
-      - @subscriptions.each do |subscription|
-        li = link_to root_path(anchor: subscription.id) do
-          = subscription.feed.name
-          '  (#{subscription.unreads_count})
+      - @feeds.each do |feed|
+        li = link_to root_path(anchor: feed.id) do
+          = feed.title
   
-  .col-md-10
+  .col-md-9
     - @entries.each do |entry|
       article.entry
         h1.entry-title = link_to entry.title, entry.url
