--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -5,7 +5,7 @@
         = link_to t(:all), root_path
       - @feeds.each do |feed|
         = content_tag :li, class: (@feed == feed ? "active" : nil) do
-          = link_to feed.title, reader_path(feed)
+          = link_to feed.title.truncate(23), reader_path(feed)
   
   .col-md-9
     - @entries.each do |entry|
