--- a/app/views/root/index.html.slim
+++ b/app/views/root/index.html.slim
@@ -11,6 +11,9 @@
     - @entries.each do |entry|
       article.entry
         h1.entry-title = link_to (entry.title || t(:no_title)), entry.url
-        p.entry-body = entry.body.html_safe
+        .entry-body
+          = entry.body.html_safe
         p.entry-timestamp
           small = entry.created_at
+
+    = paginate @entries, theme: "twitter-bootstrap-3"
